{
    "name": "Inpt",
    "maps": [
        {
            "name": "d",
            "id": "53405542-872a-4e79-9297-47bfccd278e7",
            "actions": [
                {
                    "name": "mouseScroll",
                    "type": "Value",
                    "id": "732da67c-e8e6-4e10-be38-556326cd6872",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouseRightClick",
                    "type": "Button",
                    "id": "0ecf3ff4-8ccb-43dd-836e-a9e91904053b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "chatToggle",
                    "type": "Button",
                    "id": "1b4a1c80-6936-4a9d-aa79-7a89d91aeb66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "0f81e332-a05c-4a87-9c4b-bda64be6b696",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "10c50fc4-75d4-4f05-8cf1-ce002a255d89",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b52b7157-af3f-4c51-ab56-55752a1b82c5",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1b968e11-afe4-4fc5-b1e3-cd9afb70b6a9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc661155-d723-4273-8e5b-dba9c7ef43b3",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "chatToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7531f5d-74e6-45bc-ac9c-933fffe838b1",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "chatToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}